--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
-<html>
-
-<title>Official RunningChickenDev website</title>
-
-
-<body>
-  <h1><font face="monospace">The official RunningChickenDev site</font></h1>
-  
-  <font face="arial">This site is hosted from github.</font>
-  
-  We are 2 programmers, who create stuff. <BR>
-  We are currently working together on some Minecraft plugins,
-  but we may also put some other repos on here.
+<!doctype HTML>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<link rel="shortcut icon" href="{leeg}" type="image/xicon">
+<!-- in de Href moet de pathing naar een plaatje. die moet van af C:\users\etc. -->
+<title>
+  RunningChickenDev
+</title>
+</head>
+<body background="{leeg}">
+  <h1><font face="verdana"RunningChickenDev</font></h1>
+  <h2><font face="Verdana" color="orange">What is RunningChickenDev?</font></h2>
+  <p>
+      <Font face="Verdana" color="orange">
+        We are developers and gamers who need to have a platform on which to share our projects. <Br>
+        We are currently creating a Minecraft server (not the software - just the plugins), and we made this website
+        to practice HTML.
+      </font>
+      <p><a href="https://9gag.com/u/linkthemlgelf" title="Link's 9gag"> <font face="Verdana" color="Red">Link023</font>
+        <br><a href="https://9gag.com/u/batmanondrugs/" title="MisterCavespider's 9gag"> <font face="verdana" color="red"> MisterCavespider</font>
+    <br><a href="https://github.com/RunningChickenDev" title="RunningChickenDev github">
+    <font face="Verdana" color="orange">Our github organisation!</font>
+    </a>
+  </p>
+  <ul>
+    <li><a href="{leeg}" title="about">about</li>
+  <!--hier komen extra linkjes naar andere paginas op deze site-->
+  </ul>
+    <sup>
+      RunningChickenDev (2017) all rights reserved
+    </sup>
 </body>
-
 </html>
