--- a/whoweare.html
+++ b/whoweare.html
@@ -1,11 +1,17 @@
+<!Doctype HTMl>
 <html>
-  
-  <body><font face="monospace">
-    
-    We are developers and gamers who need to have a platform on which to share our projects. <BR>
-    We are currently creating a Minecraft server (not the software - just the plugins), and we made this website
-    to practice HTML.
-    
-  </font></body>
-  
+<head>
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="{leeg}" type="image/xicon">
+<title>
+  RunningChicken|About
+</title>
+</head>
+<body background="{leeg}">
+  <h1><font face="Verdana" color="orange">About RunningChickenDev</font></h1>
+  <p>
+    This is currently a 2 person group. Link and MisterCavespider. 2 gamers that want to<br>do
+    with gaming and the internet. So Cave started to make some games And Link started tomake websites.
+  </p>
+</body>
 </html>
